fix vertical align of labels in top bar

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -379,9 +379,6 @@ form {
   }
   &.top {
     position: relative;
-    .iconBig:before {
-      margin-top: -4px;
-    }
   }
   &.bottom {
     @include absolute('' 0 0 0);
